--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "build": "vite build",
         "test": "vitest",
         "coverage": "vitest run --coverage",
-        "exports": "exports src/components.js --exports --types --main components --publish",
+        "exports": "exports src/* --exports --types --main create-auto --publish",
         "prepublishOnly": "npm run coverage",
         "create:component": "scaff component src"
     },
