--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "build": "vite build",
         "test": "vitest",
         "coverage": "vitest run --coverage",
-        "exports": "exports src/* --exports --types --main create-auto --publish",
-        "prepublishOnly": "npm run coverage",
+        "exports": "exports src/* --exports --types --main create-auto",
+        "prepublishOnly": "npm run coverage && npm run exports",
         "create:component": "scaff component src"
     },
     "keywords": [],
