--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@atomico/exports": "^0.37.0",
         "@atomico/tsconfig": "^1.0.0",
+        "@vitest/coverage-c8": "^0.23.4",
         "happy-dom": "^6.0.4",
         "typescript": "^4.8.3",
         "vite": "^3.1.3",
