--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
     "extends": "@atomico/tsconfig/base.json",
-    "include": ["src/**/*"]
+    "include": ["src/**/*"],
+    "compilerOptions": {
+        "emitDeclarationOnly": false,
+        "outDir": "dist"
+    }
 }
